@@ -1,4 +1,4 @@
-DIST pidgin-sendscreenshot-0.6-4.tar.gz 407061 RMD160 c4915646561ca113bb189233f9ae761f81da39d5 SHA1 1fd5938aa057af51bdd12a70abcc1de4004895cb SHA256 9b74b061cb3ab1ed97d8b334038a156ef850d84e340d8d85e44230a1d1892b20
-EBUILD pidgin-sendscreenshot-0.6.4.ebuild 587 RMD160 b1b185cf9f7244dbffab620b4fa34e8de4f64af8 SHA1 f43ae615d3613d38f8a5f42c9cf9172bfe668c5d SHA256 343a9dda4ce66a30cd4009d75a5653cb3cf94aea86040766bb8deba20a712a47
-MISC ChangeLog 274 RMD160 ba7d2c50a5e41af804f89c740cdf978f6fef0540 SHA1 9afc2de5fb3fe67b4d33052d88fc4d5532e61597 SHA256 7917480d91652ba35c4e2097c19d39caa78ba451e1a9891f2d43d2b39176b139
+DIST pidgin-sendscreenshot-0.7.tar.gz 449746 RMD160 795ee892c1399c7455eaf214678d567ce9611d28 SHA1 1e4010ca07463eece97d55ad06d6ae2376a0dd28 SHA256 4e34b4152c93fda5c6e328ce873b7315b772fa42829c4f2c9659650777b37203
+EBUILD pidgin-sendscreenshot-0.7.ebuild 493 RMD160 ed66456422d864453027a6b04be3d481c1e97138 SHA1 93f1b5269d0ebda3acf63c50f03b17b76a0f9630 SHA256 2a5d843fa0e31f1243f0191406cb8fe7dc812b197d852b4c608060dbf1ac9a75
+MISC ChangeLog 421 RMD160 f4ceac1568ebeb2b6515d58fd375910926e17219 SHA1 4d2938a2b45825be96c4dd7646ce432d39e58086 SHA256 4610963cdd6f1218259890c00f253b27e2858688ffb50af98e4ace6723d5ebf1
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
