@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  10 Apr 2010; Angelo D'Autilia (sYdRo) <sydro@salug.it>
+  -pidgin-sendscreenshot-0.6.4.ebuild, +pidgin-sendscreenshot-0.7.ebuild:
+  Version bump
+
   07 Mar 2010; Angelo D'Autilia (sYdRo) <sydro@salug.it>
   +pidgin-sendscreenshot-0.6.4.ebuild, +metadata.xml:
   New ebuild for bug 308249
